Fixed header on mobile view

--- a/doc/source/_static/custom.css
+++ b/doc/source/_static/custom.css
@@ -23,6 +23,10 @@ body {
     background-color: #280344;
 }
 
+.wy-nav-top {
+    background-color: #280344;
+}
+
 .wy-nav-content {
     background-color: white;
     border-color: #5c1b8e;
